next-app/app/cv/cv.module.scss
@import "@/styles/variables";
@import "@/styles/mixins";

.cvPage {
  position: relative;
}

.heroArea {
  position: sticky !important;
}

:global(.section) {
  position: relative;
}

.withBackground {
  position: relative;

  & > :global(.container) {
    z-index: 1;
  }

  &::after {
    content: "";
    position: absolute;
    display: block;
    top: 0;
    right: 0;
    width: 100%;
    height: calc(100% - 15px);
    max-height: 100%;
    background-size: 50%;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: 95% 90%;
    opacity: 0.04;
    filter: invert(15%) sepia(32%) saturate(10000%) hue-rotate(185deg)
      brightness(96%) contrast(86%);

    :global([data-color-scheme="dark"]) & {
      opacity: 0.05;
      filter: invert(48%) sepia(51%) saturate(585%) hue-rotate(161deg)
        brightness(92%) contrast(86%);
    }

    @media (min-width: $big-screen) {
      background-size: 750px;
    }

    @media (min-width: 769px) and (max-width: 1023px) {
      background-size: 65%;
    }

    @media (max-width: 768px) {
      background-size: 500px;
      background-position: right -150px bottom 15%;
    }

    @media (max-width: $small-mobile) {
      background-position: right -230px bottom 15%;
    }
  }
}

.skillsSection::after {
  background-image: url("/icons/pen-and-wrench-detailed.svg");
}

.experienceSection::after {
  background-image: url("/icons/mountain-with-flag-detailed.svg");
}

.educationSection {
  padding-bottom: 100px;

  &::after {
    background-image: url("/icons/academic-cap-detailed.svg");
    height: 100%;

    @media (min-width: $big-screen) {
      background-size: 720px;
      background-position-x: 92%;
    }
  }
}

